--- a/Client.Web/Scripts/app/component/flat-filter/flat-filter.html
+++ b/Client.Web/Scripts/app/component/flat-filter/flat-filter.html
@@ -9,5 +9,11 @@
     </div>
     <div class="input-container price">
         <h6 class="input-label">Стоимость, &#8381;</h6>
+        <div class="double_input">
+            <input class="first" type="text" placeholder="От">
+            <input class="second" type="text" placeholder="До">
+        </div>
     </div>
+
+    <div class="filter-start">Найти варианты</div>
 </div>
