--- a/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.scss
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.scss
@@ -70,4 +70,32 @@
     }
   }
 
+  .add_icon {
+    cursor: pointer;
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background: #09c77b;
+    color: #fff;
+    font-size: 18px;
+    line-height: 22px;
+    vertical-align: middle;
+    text-align: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    &:hover {
+      background-color: #15a36b;
+    }
+    &:active {
+      background-color: #15a36b;
+      box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+    }
+  }
+
 }
