--- a/Client.Web/Scripts/app/theme/style/components.scss
+++ b/Client.Web/Scripts/app/theme/style/components.scss
@@ -108,7 +108,7 @@ html, body, .button, h1, h2, h3, h4 {
 input:not([type]), input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
   box-shadow: none;
 }
-.double_input {
+.double-input {
   width: 255px;
   overflow: hidden;
 
