--- a/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
@@ -1,7 +1,7 @@
 <div class="multiselect-dropdown" on-click-outside="showList = false;">
-    <input type="text" class="dropdown-filter" ng-model="dropdownFilter" ng-focus="showList = true;" placeholder="{{selectedItems.length ? (selectedItems.length + ' станции') : 'Любое'}}"/>
-    <ul class="dropdown-list" ng-show="showList">
-        <li class="list-item" ng-repeat="item in items track by $index" ng-click="selectItem(item, $event)">
+    <input type="text" class="dropdown-filter" ng-model="dropdownFilter" ng-change="showList = true; findStation()" placeholder="{{selectedItems.length ? (selectedItems.length + ' станции') : 'Любое'}}"/>
+    <ul class="dropdown-list" ng-show="showList && filteredItems.length">
+        <li class="list-item" ng-repeat="item in filteredItems track by $index" ng-click="selectItem(item, $event)">
             <span class="mid-dot" ng-style="{color: item.color}">&middot</span>
             {{item.name}}
         </li>
@@ -14,5 +14,5 @@
         </li>
     </ul>
 
-    <div class="add_icon">+</div>
+    <div class="add_icon" ng-click="showList = !showList">+</div>
 </div>
