--- a/Client.Web/Scripts/app/component/login/login.scss
+++ b/Client.Web/Scripts/app/component/login/login.scss
@@ -83,5 +83,21 @@
         margin-bottom:30px;
       }
     }
+    .registration-success{
+      padding:100px 80px 0 80px;
+      text-align:center;
+      .ic-thanx{
+        width:60px;
+        height:45px;
+        margin:0 auto;
+        background:url('../../theme/img/ic-thanx.svg') no-repeat center center;
+        margin-bottom:60px;
+      }
+      .grey-text{
+        font-weight:500;
+        color:#697984;
+        font-size:14px;
+      }
+    }
   }
 }
