--- a/Client.Web/Scripts/app/component/login/login.html
+++ b/Client.Web/Scripts/app/component/login/login.html
@@ -125,6 +125,7 @@
                         из письма, которое мы только что отправили
                         на указанную вами электронную почту
                     </div>
+                </div>
             </div>
         </div>
     </div>
