fixes before merge

--- a/Client.Web/Scripts/app/component/login/login.scss
+++ b/Client.Web/Scripts/app/component/login/login.scss
@@ -90,7 +90,7 @@
         width:60px;
         height:45px;
         margin:0 auto;
-        background:url('../../../Content/img/ic-thanx.svg') no-repeat center center;
+        background:url('../../../Content/images/ic-thanx.svg') no-repeat center center;
         margin-bottom:60px;
       }
       .grey-text{
