--- a/Client.Web/Scripts/app/component/gheader/gheader.html
+++ b/Client.Web/Scripts/app/component/gheader/gheader.html
@@ -1,5 +1,5 @@
 ﻿<header class="gheader">
-  <img ui-sref="search" src="../Content/Images/logo-green.svg" class="logo-green"/>
+  <img ui-sref="home" src="../Content/Images/logo-green.svg" class="logo-green"/>
   <div class="grey text">Решение квартирного вопроса</div>
   <nav>
     <a ui-sref="search" ui-sref-active="active" class="menu-item">Поиск квартир</a>
@@ -7,7 +7,7 @@
   </nav>
   <button type="button" class="button round alert">Продать квартиру</button>
   <div class="black text" ng-show="!accessToken" ng-click="login()">Войти в профиль</div>
-  <div class="black text" ng-hide="accessToken" ng-click="logout()">Выйти из профиля</div>
+  <div class="black text" ng-show="accessToken" ng-click="logout()">Выйти из профиля</div>
   <div class="user-logo">
     <img src="../content/images/user-logo.svg">
   </div>
