--- a/Client.Web/Scripts/app/component/gheader/gheader.html
+++ b/Client.Web/Scripts/app/component/gheader/gheader.html
@@ -5,7 +5,7 @@
     <a ui-sref="search" ui-sref-active="active" class="menu-item">Поиск квартир</a>
     <a ui-sref="my-ads" ui-sref-active="active" class="menu-item">Мои объекты</a>
   </nav>
-  <button type="button" class="button round alert">Продать квартиру</button>
+  <button  ui-sref="add" type="button" class="button round alert">Продать квартиру</button>
   <div class="black text">Войти в профиль</div>
   <div class="user-logo">
     <img src="../content/images/user-logo.svg">
