--- a/Client.Web/Scripts/app/component/add/location/location.html
+++ b/Client.Web/Scripts/app/component/add/location/location.html
@@ -1,6 +1,3 @@
-1111111111111111111111
-
-<!--
 <tab>
     <tab-heading>
         <div class="tab_title">Локация</div>
@@ -12,6 +9,69 @@
         <div class="tab_close">&#10005;</div>
 
         <h2 class="title">Локация</h2>
+
+        <div class="form">
+            <label class="form-label">
+                <div class="label-title">Город</div>
+                <div class="label-item">
+                    <select>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                    </select>
+                </div>
+
+            </label>
+
+            <label class="form-label">
+                <div class="label-title">Улица</div>
+                <div class="label-item">
+                    <input type="text" value="Юных Ленинцев">
+                </div>
+            </label>
+
+            <label class="form-label">
+                <div class="label-title">Дом</div>
+                <div class="label-item">
+                    <input type="text" value="238">
+                </div>
+            </label>
+            <label class="form-label">
+                <div class="label-title">Корпус</div>
+                <div class="label-item">
+                    <input type="text" value="">
+                </div>
+            </label>
+            <label class="form-label">
+                <div class="label-title">Квартира</div>
+                <div class="label-item">
+                    <input type="text" value="">
+                </div>
+            </label>
+
+            <label class="form-label">
+                <div class="label-title">Район</div>
+                <div class="label-item">
+                    <select>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                    </select>
+                </div>
+
+            </label>
+
+            <label class="form-label">
+                <div class="label-title">Метро</div>
+                <div class="label-item">
+                    <select name="" id="">
+                        <option value="1">Кузиминки</option>
+                        <option value="2">Текстильщики</option>
+                    </select>
+                </div>
+
+            </label>
+
+            <button class="button action action_next">Сохранить и перейти дальше</button>
+        </div>
     </div>
 
-</tab>-->
+</tab>
