--- a/Client.Web/Scripts/app/component/add/details/details.html
+++ b/Client.Web/Scripts/app/component/add/details/details.html
@@ -66,7 +66,7 @@
                 </div>
             </label>
 
-            <button class="button action action_next">Сохранить и перейти дальше</button>
+            <button class="button action action_next green large next">Сохранить и перейти дальше</button>
         </div>
     </div>
 </tab>
