--- a/Client.Web/Scripts/app/component/add/location/location.html
+++ b/Client.Web/Scripts/app/component/add/location/location.html
@@ -14,10 +14,12 @@
             <label class="form-label">
                 <div class="label-title">Город</div>
                 <div class="label-item">
-                    <select>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                    </select>
+                    <div class="select-wrapper">
+                        <select>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                        </select>
+                    </div>
                 </div>
 
             </label>
@@ -29,32 +31,37 @@
                 </div>
             </label>
 
-            <label class="form-label">
-                <div class="label-title">Дом</div>
-                <div class="label-item">
-                    <input type="text" value="238">
-                </div>
-            </label>
-            <label class="form-label">
-                <div class="label-title">Корпус</div>
-                <div class="label-item">
-                    <input type="text" value="">
-                </div>
-            </label>
-            <label class="form-label">
-                <div class="label-title">Квартира</div>
-                <div class="label-item">
-                    <input type="text" value="">
-                </div>
-            </label>
+            <div class="triple-input">
+                <label class="form-label">
+                    <div class="label-title">Дом</div>
+                    <div class="label-item">
+                        <input type="text" value="238">
+                    </div>
+                </label>
+                <label class="form-label">
+                    <div class="label-title">Корпус</div>
+                    <div class="label-item">
+                        <input type="text" value="">
+                    </div>
+                </label>
+                <label class="form-label">
+                    <div class="label-title">Квартира</div>
+                    <div class="label-item">
+                        <input type="text" value="">
+                    </div>
+                </label>
+            </div>
+
 
             <label class="form-label">
                 <div class="label-title">Район</div>
                 <div class="label-item">
+                    <div class="select-wrapper">
                     <select>
                         <option value="1">1</option>
                         <option value="2">2</option>
                     </select>
+                    </div>
                 </div>
 
             </label>
@@ -62,15 +69,17 @@
             <label class="form-label">
                 <div class="label-title">Метро</div>
                 <div class="label-item">
+                    <div class="select-wrapper">
                     <select name="" id="">
                         <option value="1">Кузиминки</option>
                         <option value="2">Текстильщики</option>
                     </select>
+                    </div>
                 </div>
 
             </label>
 
-            <button class="button action action_next">Сохранить и перейти дальше</button>
+            <button class="button action action_next green large next">Сохранить и перейти дальше</button>
         </div>
     </div>
 
