--- a/Client.Web/Scripts/app/component/add/photos/photos.html
+++ b/Client.Web/Scripts/app/component/add/photos/photos.html
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <button class="button action action_next">Сохранить и перейти дальше</button>
+        <button class="button action action_next green large next">Сохранить и перейти дальше</button>
 
     </div>
 </tab>
