--- a/Client.Web/Scripts/app/component/add/change/change.html
+++ b/Client.Web/Scripts/app/component/add/change/change.html
@@ -66,7 +66,7 @@
                 <input type="checkbox"> После публикации перейти к добавлению объекта
             </label>
 
-            <button class="button action action_end">Сохранить и перейти дальше</button>
+            <button class="button action action_next orange large finish">Сохранить и опубликовать</button>
         </div>
     </div>
 
