--- a/Client.Web/Scripts/app/component/add/docs/docs.html
+++ b/Client.Web/Scripts/app/component/add/docs/docs.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <button class="button action action_next">Сохранить и перейти дальше</button>
+        <button class="button action action_next green large next">Сохранить и перейти дальше</button>
 
     </div>
 </tab>
