--- a/Client.Web/Scripts/app/theme/style/components.scss
+++ b/Client.Web/Scripts/app/theme/style/components.scss
@@ -104,10 +104,69 @@ html, body, .button, h1, h2, h3, h4 {
   }
 }// .flat-card
 
-// double input
-input:not([type]), input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
-  box-shadow: none;
+// inputs
+
+input[type=text], select, textarea {
+  width: 100%;
+  height: 40px;
+  border-radius: 3px;
+  box-shadow: inset 0 3px 0 0 rgba(198, 214, 222, 0.2);
+  border: solid 1px #d3dde2;
+  font-size: 16px;
+  color: #000;
+  background: transparent;
+  margin: 0;
+
+  &:focus,
+  &:hover {
+    background: #fff;
+    border: solid 1px #d3dde2;
+    outline: none;
+  }
+
+  &::-webkit-input-placeholder {color:#9aa9b1; font-size: 16px;}
+  &::-moz-placeholder          {color:#9aa9b1; font-size: 16px;}
+  &:-ms-input-placeholder      {color:#9aa9b1; font-size: 16px;}
 }
+
+.select-wrapper {
+  position: relative;
+  &:before {
+    content: '';
+    display: block;
+    width: 7px;
+    height: 7px;
+    background: transparent;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    border: solid 2px #a9b8c1;
+    border-top: none;
+    border-left: none;
+    position: absolute;
+    top: 16px;
+    right: 10px;
+  }
+}
+
+label {
+  &.form-label {
+    margin-bottom: 20px;
+  }
+
+  .label-title {
+    font-size: 15px;
+    color: #818e96;
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+}
+
+.flat_filter {
+  input:not([type]), input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
+    box-shadow: none;
+  }
+}
+
 .double-input {
   width: 255px;
   overflow: hidden;
@@ -138,3 +197,4 @@ input:not([type]), input[type="text"], input[type="password"], input[type="date"
   }
 }
 // /double input
+
