--- a/Client.Web/Scripts/app/theme/style/pages/add.scss
+++ b/Client.Web/Scripts/app/theme/style/pages/add.scss
@@ -218,3 +218,124 @@ $tab-active-bg: #f8fafb;
     }
   }
 }
+
+.form-label {
+  .double-input{
+    width: 100%;
+
+    input {
+      width: 138px;
+
+      &:first-child {
+        margin-right: 20px;
+      }
+    }
+  }
+}
+
+.triple-input {
+  &:before {
+    content: '';
+    display: table;
+    width: 100%;
+  }
+  .form-label {
+    width: 80px;
+    float: left;
+    margin-left: 27px;
+
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+}
+
+button {
+  &.button {
+    position: relative;
+    padding: 0;
+    border-radius: 3px;
+    text-align: center;
+    color: #ffffff;
+    vertical-align: middle;
+
+    &.large {
+      padding: 0;
+      height: 40px;
+      font-size: 16px;
+      line-height: 40px;
+      width: 100%;
+    }
+
+    &.green {
+      background-color: #09c77b;
+      border: solid 1px #13b474;
+
+      &:hover {
+        background-color: #15a36b;
+      }
+
+      &:active {
+        background-color: #15a36b;
+        box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+      }
+    }
+
+    &.orange {
+      background-color: #ff6f37;
+
+      &:hover {
+        background-color: #d74e19;
+      }
+
+      &:active {
+        background-color: #d74e19;
+        box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+      }
+    }
+
+    &[disabled],
+    &.disabled {
+      background-color: #e6ecf0;
+      border: solid 1px #d8e0e5;
+      cursor: default;
+    }
+
+    &.next {
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 17px;
+        right: 10px;
+        -webkit-transform: rotate(135deg);
+        width: 7px;
+        height: 7px;
+        transform: rotate(135deg);
+        border: solid 2px #ffffff;
+        border-bottom: 0;
+        border-right: 0;
+      }
+      &.finish {
+        &:before {
+          content: '';
+          display: block;
+          position: absolute;
+          top: 12px;
+          right: 15px;
+          -webkit-transform: rotate(-135deg);
+          width: 7px;
+          height: 13px;
+          transform: rotate(-135deg);
+          border: solid 2px #ffffff;
+          border-bottom: 0;
+          border-right: 0;
+        }
+
+        text-align: left;
+        padding-left: 15px;
+      }
+    }
+  }
+
+}
