--- a/Client.Web/Scripts/app/theme/style/components.scss
+++ b/Client.Web/Scripts/app/theme/style/components.scss
@@ -31,7 +31,9 @@ html, body, .button, h1, h2, h3, h4 {
     margin-bottom: 20px;
     overflow: hidden;
 
-    img {}
+    img {
+      width: 100%;
+    }
   }
 
   .card_description {
