--- a/Client.Web/Scripts/app/theme/style/icon-font/style.scss
+++ b/Client.Web/Scripts/app/theme/style/icon-font/style.scss
@@ -1,4 +1,4 @@
-@font-face {
+﻿@font-face {
     font-family: 'icomoon';
     src:    url('../../../../Content/Images/Fonts/icon-fonts/icomoon.eot?kb050c');
     src:    url('../../../../Content/Images/Fonts/icon-fonts/icomoon.eot?kb050c#iefix') format('embedded-opentype'),
