--- a/Client.Web/Scripts/app/component/login/login.scss
+++ b/Client.Web/Scripts/app/component/login/login.scss
@@ -14,7 +14,7 @@
       left: 0;
       bottom: 0;
       right: 0;
-      background: url('../../../Content/Images/login-background.png') no-repeat center center;
+      background: url('../Content/Images/login-background.png') no-repeat center center;
       background-size: cover;
       z-index: -1;
     }
@@ -90,7 +90,7 @@
         width:60px;
         height:45px;
         margin:0 auto;
-        background:url('../../../Content/Images/ic-thanx.svg') no-repeat center center;
+        background:url('../Content/Images/ic-thanx.svg') no-repeat center center;
         margin-bottom:60px;
       }
       .grey-text{
