--- a/Client.Web/Scripts/app/theme/style/fonts.scss
+++ b/Client.Web/Scripts/app/theme/style/fonts.scss
@@ -1,5 +1,5 @@
 @import 'mixins.scss';
-@import 'icon-font/style.scss';
+@import 'icon-font/style.css';
 
 
 @include font-face("Lato", "../../../../Content/Images/Fonts/Lato/Lato-Thin", 100, $exts: ttf);
