--- a/Client.Web/Scripts/app/component/config/router/search-page.html
+++ b/Client.Web/Scripts/app/component/config/router/search-page.html
@@ -26,7 +26,7 @@
     <div class="right-column column">
         <div class="search_map" style="width: 100%;height: 800px;">
             <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-after-init="afterMapInit($target)" ya-controls>
-                <ya-geo-object ya-source="[55.73, 37.65]" ya-options="{preset: 'islands#circleIcon',iconColor: '#ff6f37'}"></ya-geo-object>
+                <ya-geo-object ng-repeat="flat in flats track by flat.id" ya-source="flat.coords" ya-options="{preset: 'islands#circleIcon',iconColor: '#ff6f37'}"></ya-geo-object>
             </ya-map>
         </div>
 
