--- a/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.scss
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.scss
@@ -1,5 +1,6 @@
 .multiselect-dropdown {
   position: relative;
+  max-width: 170px;
   .dropdown-filter {
     border-radius: 5px;
     padding: 5px 10px;
@@ -34,8 +35,9 @@
     font-size: 13px;
     padding: 5px 0;
     .list-item {
-      padding: 2px 5px;
+      padding: 2px 15px;
       cursor: pointer;
+      text-indent: -11px;
       .mid-dot {
         font-size: 30px;
         line-height: 1px;
@@ -63,6 +65,7 @@
     z-index: 100;
     .list-item {
       padding: 2px 10px;
+      text-indent: 0;
       &:hover {
         background: #eee;
         cursor: pointer;
