add flat highlighting on marker hover

--- a/Client.Web/Scripts/app/component/config/router/search-page.html
+++ b/Client.Web/Scripts/app/component/config/router/search-page.html
@@ -7,7 +7,7 @@
                 <span class="count">{{filteredFlats.length}}</span> предложений
             </div>
             <div class="offers_list clearfix">
-                <a class="flat-card"  ui-sref="apartment-detail({id: flat.id})" ng-repeat="flat in filteredFlats track by flat.id">
+                <a class="flat-card" ui-sref="apartment-detail({id: flat.id})" ng-repeat="flat in filteredFlats track by flat.id" ng-class="{active: flat.highlighted}">
                     <div class="card_image">
                         <img ng-src="{{flat.images[0].src}}" alt="">
                     </div>
@@ -24,9 +24,14 @@
         </div>
     </div>
     <div class="right-column column">
-        <div class="search_map" style="width: 100%;height: 800px;">
+        <div class="search-map" style="width: 100%;height: 800px;">
             <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-after-init="afterMapInit($target)" ya-controls>
-                <ya-geo-object ng-repeat="flat in flats track by flat.id" ya-source="flat.coords" ya-options="{preset: 'islands#circleIcon',iconColor: '#ff6f37'}"></ya-geo-object>
+                <ya-geo-object ng-repeat="flat in flats track by flat.id" ya-source="flat.coords"
+                               ya-show-all="true"
+                               ya-options="{iconLayout: 'default#image', iconImageHref: '../content/images/map-icon-small.svg', iconImageSize:[30, 30], iconImageOffset: [0, 0]}"
+                               ya-event-mouseenter="markerOnMouseEnter(flat.id, $event)"
+                               ya-event-mouseleave="markerOnMouseLeave(flat.id, $event)"
+                >ae</ya-geo-object>
             </ya-map>
         </div>
 
