--- a/Client.Web/Scripts/app/theme/style/components.scss
+++ b/Client.Web/Scripts/app/theme/style/components.scss
@@ -1,4 +1,4 @@
-html, body, .button, h1, h2, h3, h4 {
+﻿html, body, .button, h1, h2, h3, h4 {
   font-family: 'Lato', Helvetica, sans-serif !important;
 }
 
@@ -66,7 +66,7 @@ html, body, .button, h1, h2, h3, h4 {
   }
 
   .card_control_more {
-    display: block;
+    display: none;
     z-index: 100;
     cursor: pointer;
     width: 100px;
@@ -83,7 +83,6 @@ html, body, .button, h1, h2, h3, h4 {
     text-align: center;
     line-height: 28px;
     vertical-align: middle;
-    display: none;
 
     &:hover {
       background-color: #d74e19;
