--- a/Client.Web/Scripts/app/component/gheader/gheader.html
+++ b/Client.Web/Scripts/app/component/gheader/gheader.html
@@ -1,5 +1,5 @@
 ﻿<header class="gheader">
-  <img ui-sref="home" src="../Content/Images/logo-green.svg" class="logo-green"/>
+  <img ui-sref="search" src="../Content/Images/logo-green.svg" class="logo-green"/>
   <div class="grey text">Решение квартирного вопроса</div>
   <nav>
     <a ui-sref="search" ui-sref-active="active" class="menu-item">Поиск квартир</a>
